# ExbotRover

./: 0-acc_download.sh  2-duck_install.sh  3-gym_install.sh  README.md  install_exbot_ros_rover_kinetic.sh  rover_rviz.launch  tutorial.md
src/nav_test/: CMakeLists.txt  README.md
src/nav_test/config/: nav.rviz  nav_addwa.rviz  nav_addwa_kinect.rviz  nav_xiaoqiang.rviz  nav_xq.rviz  nav_xq2.rviz  xiaoqiang_amcl.rviz
src/nav_test/config/NLlinepatrol/: base_global_planner_params.yaml  local_costmap_params.yaml
src/nav_test/config/fake/: base_local_planner_params2.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/nav_test/config/linepatrol/: base_global_planner_params.yaml  base_local_planner_params.yaml  (+1 more)
src/nav_test/launch/: fake.launch  fake_move_base.launch  fake_move_base_blank_map.launch  fake_move_base_obstacle.launch  temp.launch  xiaoqiang_a2_demo_amcl.launch  xiaoqiang_move_base.launch  xiaoqiang_move_base_blank_map.launch  xq_move_base.launch  xq_move_base2.launch  xq_move_base_blank_map.launch  xq_move_base_blank_map2.launch
src/nav_test/maps/: blank_map.yaml  tank.yaml  work0.pgm  work0.yaml
src/nav_test/nodes/: move_base_square.py
src/nav_test/src/: NLlinepatrol.py  barDetectChanger.py  control.py  get_accel.py  get_odom.py  get_rota_accel.py  linepatrol.py  pose.py  record_control.py  square.py
src/serial_server/: CMakeLists.txt  package.xml
src/serial_server/launch/: serial.launch
src/serial_server/src/: DiffDriverController.cpp  DiffDriverController.h  StatusPublisher.cpp  StatusPublisher.cpp~  StatusPublisher.h  main.cpp
(+4 files in other folders)
